--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-pages branch
+This is the GH Pages Branch for https://github.com/leemason/NHP-Theme-Options-Framework
+
+No code here, just html Pages.
