--- a/README
+++ b/README
@@ -1,1 +1,9 @@
 theme options settings for wordpress, still working on, but will be ready soon
+
+Simple Usage::
+
+Simply require the theme-options.php file in your themes functions.php file, like so:
+
+require( dirname( __FILE__ ) . '/theme-options.php' );
+
+then change the settings as written in the theme-options.php file
